# continuislabs-r8n-triage

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  assignment.txt  deploy-ec2.sh  docker-compose.yml  nginx-r8n.conf  practice_questions.md  pyproject.toml  r8n-triage.service  start.sh
docs/: dashboard-proposal.md  hologram-cli.md
marketing/: marketing_architecture.md  marketing_feature_overview.md  project.md
src/hologram_cli/: __main__.py  cli.py  client.py  config.py  mock_data.py  output.py
src/hologram_cli/commands/: at.py  sim.py
src/hologram_cli/triage/: __init__.py  analyzer.py  at_reference.py  oracle.py  parser.py  reply.py  signals.py
tests/: test_analyzer.py  test_at_reference.py  test_health_states.py  test_parser.py  test_signals.py
web/: analytics.py  auth.py  db.py  main.py  seed.py
web/static/: app.css
web/templates/: at_reference.html  audit.html  audit_detail.html  base.html  bulk.html  codex.html  codex_entry.html  codex_new.html  conductor.html  fleet.html  home.html  landing.html  onboard.html  portal_home.html  portal_triage.html  search.html  sim_detail.html  sims_index.html  triage.html
web/templates/auth/: login.html
web/templates/partials/: at_decode_result.html  at_lookup_result.html  portal_triage_result.html  triage_result.html
